[GTK][WPE] Wrong visualization of Conic gradients in high resolution displays https://bugs.webkit.org/show_bug.cgi?id=205444

Reviewed by Carlos Alberto Lopez Perez.

Reduce the size of the separation between sections since a separation of
1 pixel is too wide in high resolution displays.

* platform/graphics/cairo/GradientCairo.cpp:
(WebCore::addConicSector):


Canonical link: https://commits.webkit.org/218698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253817 268f45cc-cd09-0410-ab3c-d52691b4dbfc